--- a/src/app/menu-items/configuracoes/configuracoes.page.html
+++ b/src/app/menu-items/configuracoes/configuracoes.page.html
@@ -18,7 +18,7 @@
         <ion-item>
           <ion-label>User Name: <br>{{this.userInfo.userName}}</ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item (click)="alterarEmail()">
           <ion-label>Email: <br>{{this.userInfo.email}}</ion-label>
         </ion-item>
         <ion-item>
