--- a/src/app/tabs/tab5/tab5.page.scss
+++ b/src/app/tabs/tab5/tab5.page.scss
@@ -10,3 +10,9 @@
         align-items: flex-end;
     }
 }
+.user{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-left: 10px;
+}
