--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <ion-app>
-  <ion-menu menuId="main-menu" onload={{this.onLoad()}} content-id="main" >
-    <ion-content>
+  <ion-menu menuId="main-menu"  onload={{this.onLoad()}} content-id="main" >
+    <ng-container *ngIf="userProfile">
+      <ion-content>
       <div class="divHeader">
         <div class="divImagens">
           <img class="imgFundo" src="/assets/monument2.jpg">
-          <ion-avatar><img src="/assets/jesse.jpg"></ion-avatar>
+          <ion-avatar><img [src]="userProfile.profileImageUrl?'https://storageapptravel.blob.core.windows.net/profilephotos/'+userProfile.profileImageUrl:'/assets/profile.png'"></ion-avatar>
         </div>
         <div class="divDados">
-          <h3>Jesse Pinkman</h3>
-          <p>@JesseBeach</p>
+          <h3>{{userProfile.name}}</h3>
+          <p>@{{userProfile.id}}</p>
 
           <div class="divRelevancia">
             <div class="divStats">
@@ -40,7 +41,7 @@
         </ion-menu-toggle>
 
         <ion-menu-toggle>
-          <ion-item routerLink="/perfil" routerLinkActive="active-item">
+          <ion-item routerLink="/perfil" routerLinkActive="active-item" (click)="profile()">
             <ion-icon name="person-outline" slot="start"></ion-icon>
             <ion-label>Perfil</ion-label>
           </ion-item>
@@ -81,6 +82,8 @@
       </div>
 
     </ion-content>
+    </ng-container>
+    
   </ion-menu>
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
