--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-content>
 
   <h4>Recomendados</h4>
-  <app-post [user_name]="posts.username" [post_content]="posts.postcontent" [post_city]="posts.city" [post_country]="posts.country" *ngFor="let posts of posts"></app-post>
+  <app-post [post_data]="posts" *ngFor="let posts of posts"></app-post>
 
   <ion-infinite-scroll (ionInfinite)="loadPosts($event)">
     <ion-infinite-scroll-content
